<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.About"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#06567C"
        app:title="About"

        app:titleTextColor="#FFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Circuit World :"
            android:layout_marginHorizontal="10dp"
            android:textColor="#0E7DD6"
            android:textSize="18dp"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#000000"
            android:layout_marginHorizontal="10dp">

        </TextView>
        <TextView
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_add"
            android:textColor="#3F51B5"
            android:layout_marginHorizontal="10dp"
            ></TextView>
        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textColor="#3F51B5"
            android:layout_marginHorizontal="10dp"
            ></TextView>
        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_mail"
            android:textColor="#3F51B5"
            android:layout_marginHorizontal="10dp"
            ></TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circuitworld_mainlogo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            ></ImageView>
        <TextView
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="#3F51B5"
            android:layout_marginHorizontal="10dp"
            ></TextView>
    </LinearLayout>
</LinearLayout>